@@ -161,12 +161,7 @@ Example:
         </format-version>
       </file-info>
       <creator-info>
-    Torrus version 0.1.4d
-    This file was generated by command:
-    /usr/local/torrus-0.1/bin/genddx \
-     --discout=share/torrus/xmlconfig/myrouters.xml \
-     --community=blahblah  --host=10.0.0.1  --host=10.0.1.1
-    On Tue Dec  2 17:43:30 2003
+       Manually edited by Vassisuali Poupkine
       </creator-info>
       <param name="data-dir" value="@defrrddir@"/>
       <param name="domain-name" value=""/>
@@ -178,10 +173,23 @@ Example:
       <param name="snmp-retries" value="2"/>
       <param name="snmp-timeout" value="10"/>
       <param name="snmp-version" value="2c"/>
+
       <host>
         <param name="snmp-host" value="10.0.0.1"/>
         <param name="symbolic-name" value="10.0.0.1"/>
+
+        <!-- Example of 15-second polling interval.
+             15-second stats are stored for 10 days, and 5-minute
+             aggregates are stored for 30 days.-->
+
+        <param name="collector-period" value="15"/>
+        <param name="collector-timeoffset" value="0"/>
+        <param name="rrd-create-rra">
+           RRA:AVERAGE:0:1:57600
+           RRA:AVERAGE:0.25:20:8640      RRA:MAX:0.25:20:8640
+        </param>
       </host>
+
       <host>
         <param name="snmp-host" value="10.0.1.1"/>
         <param name="symbolic-name" value="10.0.1.1"/>
@@ -200,9 +208,6 @@ Example:
          RRA:AVERAGE:0.34:12:4560     RRA:MAX:0.34:12:4560
          RRA:AVERAGE:0.25:288:732    RRA:MAX:0.25:288:732
        </param>
-
-       <param name="host-copy-params" value="rrd-create-rra"/>
-
       </host>
     </snmp-discovery>
 
@@ -401,6 +406,13 @@ this host.
 If C<only-devtypes> parameter is specified, the SNMP reachability
 statistics are disabled by default. If C<enable-reachability-stats> is
 set to C<yes>, the reachability statistics are actvated in any case.
+
+=item * C<rrd-create-rra>
+
+This parameter overrides the default round-robin array definition for
+collector statistics. By default, we keep 5-minute details for 2 weeks,
+30-minute average and maximum details for 6 weeks, and 1-day aggregated
+stats for 2 years.
 
 =item * C<snmp-reachability-rra>
 
